--- a/index.html
+++ b/index.html
@@ -1,7 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="js/lib/slick/slick-theme.css">
+    <link rel="stylesheet" href="js/lib/slick/slick.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/lib/jquery-3.6.1.min.js"></script>
+    <script src="js/lib/slick/slick.min.js"></script>
+    <script src="js/lib/jquery-ui-1.13.2.custom/jquery-ui.js"></script>
+    <script src="js/script.js"></script>
+    <title>메인페이지</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div id="wrap" class="wrap">
+        <!-- container -->
+        <div id="container" class="container ">
+            <!-- //content -->
+            <div id="content" class="content mainContent">
+                <div class="titleArea">
+                    <img src="images/img/imgFire.svg" alt="fire">
+                    <p class="title">이 근처에 먹을만한곳이 어디있을까?</p>
+                    <p class="decs">맛집 카드종류를 골라주세요!</p>
+                </div>
+                <div class="slideArea">
+                    <div class="slide-item">
+                        <div class="card cafe ">
+                            <p class="cardTitle">카페</p>
+                            <img src="images/img/imgCafe.svg" alt="카페">
+                        </div>
+                    </div>       
+                    <div class="slide-item">
+                        <div class="card">
+                            <p class="cardTitle">음식점</p>
+                            <img src="images/img/imgFood.svg" alt="음식점">
+                        </div>
+                    </div>
+                    <div class="slide-item">
+                        <div class="card">
+                            <p class="cardTitle">술집</p>
+                            <img src="images/img/imgBeer.svg" alt="술집">
+                        </div>
+                    </div>
+                    <div class="slide-item">
+                        <div class="card">
+                            <p class="cardTitle">액티비티</p>
+                            <img src="images/img/imgActivity.svg" alt="액티비티 ">
+                        </div>
+                    </div>
+                </div>
+                <p class="slideDecs">
+                    <img src="images/icon/icArrowUp.svg" alt="icArrowUp">
+                    이 맛집카드로 선택 하시겠습니까?</p>
+                <div class="buttonArea">
+                    <a href="index_2.html"><button class="btnActive">찾아보기</button></a>
+                </div>
+            </div>
+            <!-- //content -->
+        </div> 
+        <!-- //container -->
+    </div>
 </body>
 </html>
