--- a/index.html
+++ b/index.html
@@ -26,30 +26,39 @@
                     <p class="decs">맛집 카드종류를 골라주세요!</p>
                 </div>
                 <div class="slideArea">
-                    <div class="slide-item">
-                        <div class="card cafe ">
-                            <p class="cardTitle">카페</p>
-                            <img src="images/img/imgCafe.svg" alt="카페">
+                    <!-- <div class="prevBtn">
+                        <img src="images/icon/icArrowLeft.svg" alt="">
+                    </div> -->
+                    <div class="slideContent">
+                        <div class="slide-item">
+                            <div class="card cafe ">
+                                <p class="cardTitle">카페</p>
+                                <img src="images/img/imgCafe.svg" alt="카페">
+                            </div>
+                        </div>  
+                        <div class="slide-item">
+                            <div class="card">
+                                <p class="cardTitle">음식점</p>
+                                <img src="images/img/imgFood.svg" alt="음식점">
+                            </div>
                         </div>
-                    </div>       
-                    <div class="slide-item">
-                        <div class="card">
-                            <p class="cardTitle">음식점</p>
-                            <img src="images/img/imgFood.svg" alt="음식점">
+                        
+                        <div class="slide-item">
+                            <div class="card">
+                                <p class="cardTitle">술집</p>
+                                <img src="images/img/imgBeer.svg" alt="술집">
+                            </div>
+                        </div>
+                        <div class="slide-item">
+                            <div class="card">
+                                <p class="cardTitle">액티비티</p>
+                                <img src="images/img/imgActivity.svg" alt="액티비티 ">
+                            </div>
                         </div>
                     </div>
-                    <div class="slide-item">
-                        <div class="card">
-                            <p class="cardTitle">술집</p>
-                            <img src="images/img/imgBeer.svg" alt="술집">
-                        </div>
-                    </div>
-                    <div class="slide-item">
-                        <div class="card">
-                            <p class="cardTitle">액티비티</p>
-                            <img src="images/img/imgActivity.svg" alt="액티비티 ">
-                        </div>
-                    </div>
+                    <!-- <div class="nextBtn">
+                        <img src="images/icon/icArrowRight.svg" alt="">
+                    </div> -->
                 </div>
                 <p class="slideDecs">
                     <img src="images/icon/icArrowUp.svg" alt="icArrowUp">
