--- a/index_3.html
+++ b/index_3.html
@@ -65,6 +65,7 @@
                         <p class="lable">매뉴정보</p>
                         <div>
                             <div class="menuList "> 
+                                <a href="#">DD</a>
                                 <p  class="menu">짜장면<span class="menuReco">추천</span></p>
                                 <p class="border"></p>
                                 <p class="price">6,000원</p>
@@ -96,25 +97,25 @@
                         <p class="lable">매장사진</p>
                         <ul>
                             <li class="photo">
-                                <div herf="#">
+                                <div>
                                     <img src="images/img/market_01.png" alt="">
                                     <p class="hash">매뉴판</p>
                                 </div>
                             </li>
                             <li class="photo">
-                                <div herf="#">
+                                <div>
                                     <img src="images/img/market_02.png" alt="">
                                     <p class="hash">추천매뉴</p>
                                 </div>
                             </li>
                             <li class="photo">
-                                <div herf="#">
+                                <div>
                                     <img src="images/img/market_03_1.png" alt="">
                                     <p class="hash">가게외부</p>
                                 </div>
                             </li>
                             <li class="photo">
-                                <div herf="#">
+                                <div>
                                     <img src="images/img/market_04.png" alt="">
                                     <p class="hash">가게내부</p>
                                 </div>
