--- a/index.html
+++ b/index.html
@@ -21,51 +21,21 @@
             <!-- //content -->
             <div id="content" class="content mainContent">
                 <div class="titleArea">
-                    <img src="images/img/imgFire.svg" alt="fire">
-                    <p class="title">이 근처에 먹을만한곳이 어디있을까?</p>
-                    <p class="decs">맛집 카드종류를 골라주세요!</p>
+                    <p class="title">스낵 동인천</p>
+                    <p class="decs">동인천을 즐기는 가장 똑똑한 방법</p>
                 </div>
-                <div class="slideArea">
-                    <!-- <div class="prevBtn">
-                        <img src="images/icon/icArrowLeft.svg" alt="">
-                    </div> -->
-                    <div class="slideContent">
-                        <div class="slide-item">
-                            <div class="card cafe ">
-                                <p class="cardTitle">카페</p>
-                                <img src="images/img/imgCafe.svg" alt="카페">
-                            </div>
-                        </div>  
-                        <div class="slide-item">
-                            <div class="card">
-                                <p class="cardTitle">음식점</p>
-                                <img src="images/img/imgFood.svg" alt="음식점">
-                            </div>
-                        </div>
-                        
-                        <div class="slide-item">
-                            <div class="card">
-                                <p class="cardTitle">술집</p>
-                                <img src="images/img/imgBeer.svg" alt="술집">
-                            </div>
-                        </div>
-                        <div class="slide-item">
-                            <div class="card">
-                                <p class="cardTitle">액티비티</p>
-                                <img src="images/img/imgActivity.svg" alt="액티비티 ">
-                            </div>
-                        </div>
+                <div class="mainPic" >
+                    <img src="images/img/mainPic.png" style="display: block; margin: 0 auto; width: 70%; height:auto; ">
+                    <div class="mainIconBox" style="position: absolute;"> 
+                        <a href ="index_3.html"><img src="images/icon/main/eatIcon.png" style = "height:20vw;"></a>
+                        <a href ="index_3.html"><img src="images/icon/main/playIcon.png" style = "height:20vw;"></a>
+                        <a href ="index_watch.html"><img src="images/icon/main/watchIcon.png" style = "height:20vw;"></a>
                     </div>
-                    <!-- <div class="nextBtn">
-                        <img src="images/icon/icArrowRight.svg" alt="">
-                    </div> -->
                 </div>
-                <p class="slideDecs">
-                    <img src="images/icon/icArrowUp.svg" alt="icArrowUp">
-                    이 맛집카드로 선택 하시겠습니까?</p>
-                <div class="buttonArea">
-                    <a href="index_2.html"><button class="btnActive">찾아보기</button></a>
-                </div>
+                <p class="slideDecs"><img src="images/img/mainLogo.svg">
+                    인천광역시
+                    <br>동인천역도시재생현장지원센터
+                </p>
             </div>
             <!-- //content -->
         </div> 
