--- a/index_watch.html
+++ b/index_watch.html
@@ -74,8 +74,8 @@
                 <div class="buttonArea">
                     
                     <a href="index.html"><button class="btnHome">홈</button></a>
-                    <a href="index_2.html"><button class="btnRetry">다시찾기</button></a>
-                    <button class="btnActive">길찾기</button>
+                    <a href="index_2.html" style="display: none"><button class="btnRetry" style="display: none">다시찾기</button></a>
+                    <button class="btnActive" style="display: none">길찾기</button>
                 </div>
             </div>
             <!-- //content -->
