--- a/index_watch.html
+++ b/index_watch.html
@@ -21,7 +21,7 @@
         var mainNM = '';
         var subNM = '';
         var content = '';
-        const randomNM = Math.floor(Math.random()*(maxNM + 1 - minNM) + minNM);
+        const randomNM = Math.floor(Math.random()*maxNM + minNM);
 
         function setVar(){
             content = testData[0][randomNM]['content']
