--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <p class="slideDecs"><img src="images/img/mainLogo.svg">
-                    인천광역시
+                    인천광역시 뭐냐 수정되라
                     <br>동인천역도시재생현장지원센터
                 </p>
             </div>
