--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <br>동인천역도시재생현장지원센터
                 </p>
             </div>
+            <!--refresh-->
             <!-- //content -->
         </div> 
         <!-- //container -->
