--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                 <p class="slideDecs"><!--<img src="images/img/mainLogo.svg">--><img src="images/img/mainLogo.png">
                     인천광역시
                     <br>동인천역도시재생현장지원센터
+                    <br>
+                    제작 : 동인천 돋보기
+                    <br>
+                    제작자 : 김유진, 김범식, 노동원, 신다운, 임성원
+                </p>
+                <p class="slideDecs">
+                    
+
                 </p>
             </div>
             <!-- //content -->
