--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <br>
                     제작 : 동인천 돋보기
                     <br>
-                    제작자 : 김유진, 김범식, 노동원, 신다운, 임성원
+                    (김유진, 김범식, 노동원, 신다운, 임성원)
                 </p>
                 <p class="slideDecs">
                     
